--- a/public/layouts/css/conan-layout.css
+++ b/public/layouts/css/conan-layout.css
@@ -27,3 +27,9 @@ body {
     align-items: center;
     flex-direction: column;
 }
+
+#oliphant_id_cart_list {
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+}
